--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="logo">
             <img
               class="logo-img"
-              src="/assets/img/Group.png"
+              src="./assets/img/Group.png"
               alt="логотип сайта"
             />
           </a>
@@ -53,7 +53,7 @@
           <h1 class="title">IPHONE 14PRO</h1>
           <img
             class="headline-img"
-            src="/assets/img/iphone_14_pro_finish_unselect_gallery_1_202209_GEO_US_removebg.png"
+            src="./assets/img/iphone_14_pro_finish_unselect_gallery_1_202209_GEO_US_removebg.png"
             alt=""
           />
           <a class="headline-btn" href="#">ВЫБРАТЬ</a>
@@ -90,7 +90,7 @@
             </div>
             <img
               class="images-new"
-              src="/assets/img/Apple-iPhone-14-Pro-Max 1.png"
+              src="./assets/img/Apple-iPhone-14-Pro-Max 1.png"
               alt=""
             />
           </div>
@@ -101,22 +101,22 @@
           <h2 class="color-title">ВЫБЕРИТЕ СВОЙ ЦВЕТ</h2>
           <ul class="color-list">
             <li class="color-item">
-              <img src="/assets/img/silver 1.jpg" alt="" class="" />
+              <img src="./assets/img/silver 1.jpg" alt="" class="" />
               <h3>Silver</h3>
               <p>Серебристый</p>
             </li>
             <li class="color-item">
-              <img src="/assets/img/purple.jpg" alt="" class="" />
+              <img src="./assets/img/purple.jpg" alt="" class="" />
               <h3>Deep purple</h3>
               <p>Темно фиолетовый</p>
             </li>
             <li class="color-item">
-              <img src="/assets/img/голд.jpg" alt="" class="" />
+              <img src="./assets/img/голд.jpg" alt="" class="" />
               <h3>Gold</h3>
               <p>Золотой</p>
             </li>
             <li class="color-item">
-              <img src="/assets/img/black.jpg" alt="" class="" />
+              <img src="./assets/img/black.jpg" alt="" class="" />
               <h3>Space Black</h3>
               <p>Космический черный</p>
             </li>
@@ -144,7 +144,7 @@
             </form>
             <img
               class="contacts-img"
-              src="assets/img/hero_endframe__cvklg0xk3w6e_large 1.jpg"
+              src=".assets/img/hero_endframe__cvklg0xk3w6e_large 1.jpg"
               alt=""
             />
           </div>
@@ -166,6 +166,6 @@
         </div>
       </div>
     </footer>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
