--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="logo">
             <img
               class="logo-img"
-              src=".assets/img/Group.png"
+              src="./assets/img/Group.png"
               alt="логотип сайта"
             />
           </a>
