--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/style/normalize.css" />
-    <link rel="stylesheet" href="/assets/style/main.css" />
+    <link rel="stylesheet" href="..assets/style/main.css" />
 
     <title>Document</title>
   </head>
