--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/style/normalize.css" />
-    <link rel="stylesheet" href="./assets/style/main.css" />
+    <link rel="stylesheet" href="assets/style/normalize.css" />
+    <link rel="stylesheet" href="assets/style/main.css" />
 
     <title>Document</title>
   </head>
