--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="menu-link" href="#">Цвет</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#">Что нового</a>
+              <a class="menu-link" href="#">Заказать</a>
             </li>
           </ul>
           <a class="logo">
